@@ -1,5 +1,10 @@
 2008-10-28  Richard Hult  <richard@imendio.com>
 
+	* src/quartz-style.c (draw_handle): Implement drawing paned
+	handles.
+
+2008-10-28  Richard Hult  <richard@imendio.com>
+
 	* src/quartz-style.c (style_setup_rc_styles): Use tooltip colors
 	from the color scheme.
 
